<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.movierivvana.activity.SignUpActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#fff"
    tools:ignore="ExtraText">

    //logo
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/logo"/>

    //welcome
<TextView
android:id="@+id/slogan_signup"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
android:text="@string/slogan_signup"
android:textSize="@dimen/text_xl"
android:textColor="#8a2be2"
android:textStyle="bold"/>

    //layout2
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginTop="20dp"
android:layout_marginBottom="20dp"
android:orientation="vertical">


//email
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:id="@+id/text_email"
    android:hint="@string/email"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

</com.google.android.material.textfield.TextInputLayout>
//username
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:id="@+id/text_username"
    android:hint="@string/username"
    app:counterMaxLength="15"

    app:counterEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</com.google.android.material.textfield.TextInputLayout>
//nomor hp
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:id="@+id/phone_number"
    android:hint="@string/phone_number"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

</com.google.android.material.textfield.TextInputLayout>
//password
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:id="@+id/text_password"
    android:hint="@string/password"
    app:passwordToggleEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
</com.google.android.material.textfield.TextInputLayout>

//daftar
<Button
    android:id="@+id/button_signup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/signup"
    android:padding="10dp"
    android:textSize="@dimen/text_md"/>
//to login

<Button
    android:id="@+id/button_toSignin"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:textStyle="bold"
    android:textSize="@dimen/text_sm"
    android:layout_height="wrap_content"
    android:text="@string/old_user"
    android:textAllCaps="false"
    android:textColor="#8a2be2"
    android:gravity="right"
    android:background="#00000000"/>

</LinearLayout>

</LinearLayout>
