<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.movierivvana.activity.AboutActivity">

    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_lg"
        android:text="@string/about_me"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/img_Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/profil_2"/>

    <TextView
        android:id="@+id/text_nama"
        android:layout_width="match_parent"
        android:text="Nama : Mohamad Bagus Rizky"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/text_md"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_nim"
        android:layout_width="match_parent"
        android:text="NIM : 19.11.2711"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/text_md"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="Rivvana adalah sebuah Aplikasi Streaming Film menggunakan bahasa pemrograman Java yang terintegrasi dengan Internet."
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/text_md"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_Bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/ganti_bahasa"/>

    <Button
        android:id="@+id/button_Kembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/kembali"/>

</LinearLayout>